forgot some formatting adding it now

--- a/.github/workflows/tg-model-perf-tests-impl.yaml
+++ b/.github/workflows/tg-model-perf-tests-impl.yaml
@@ -25,8 +25,8 @@ jobs:
   tg-model-perf-tests:
     strategy:
       fail-fast: false
-      matrix:
-        test-group: [
+      matrix: ${{ fromJSON(format('{
+    "test-group": [
           {
             name: "Galaxy CNN model perf tests",
             model-type: "CNN",
