--- a/.github/workflows/tg-frequent-tests-impl.yaml
+++ b/.github/workflows/tg-frequent-tests-impl.yaml
@@ -27,7 +27,12 @@ jobs:
       fail-fast: false
       matrix:
         test-group: [
-          { name: "Galaxy Llama3 frequent tests", arch: wormhole_b0, model: llama3, timeout: 90, owner_id: U053W15B6JF}, # Djordje Ivanovic
+          { 
+            name: "Galaxy Llama3 frequent tests", 
+            arch: wormhole_b0, model: llama3, 
+            cmd: LLAMA_DIR=/mnt/MLPerf/tt_dnn-models/llama/Llama3.3-70B-Instruct/ FAKE_DEVICE=TG pytest -n auto models/demos/llama3_70b_galaxy/tests/test_llama_model_nd.py
+            timeout: 90, 
+            owner_id: U053W15B6JF}, # Djordje Ivanovic
           { name: "Galaxy resnet50 frequent tests", arch: wormhole_b0, model: resnet50, timeout: 90, owner_id: U052J2QDDKQ}, # Pavle Josipovic
           { name: "Galaxy unit/distributed frequent tests", arch: wormhole_b0, model: unit, timeout: 90, owner_id: UBHPP2NDP}, # Joseph Chu
           { name: "Galaxy SD3.5 frequent tests", arch: wormhole_b0, model: sd35, timeout: 90, owner_id: U03FJB5TM5Y}, # Colman Glagovich
